src/objects/CodeReview__c.object
<CustomObject>
    <fields>
        <fullName>CanBeMerged__c</fullName>
        <formula>if( Score__c = 1, true, false )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CanBeMerged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CodeReviewDate__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>CodeReview Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Code Reviews</relationshipLabel>
        <relationshipName>CodeReviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EstimatedHours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RealHours__c</fullName>
        <label>RealHours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If value is 1 then the process can be merged
If value is 0 it cannot be merged</description>
        <label>Score</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Code Reviews</relationshipLabel>
        <relationshipName>CodeReviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Code Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>